Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-16022

QHttpNetworkConnectionChannel::expand discards data if gzip-stream has a missing end-of-stream marker

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 4.7.4
    • 4.7.0
    • Network
    • None
    • Linux, 32 Bit
    • b487fb1cc1a3be4a197ec458fc3b575d7b57d6a5

      As the summary says, if gzip-compressed content without end-of-stream marker is sent by a server, QHttpNetworkConnectionChannel::expand will loose the last bit of data. This is in connection with a QtWebKit-bug, please see https://bugs.webkit.org/show_bug.cgi?id=50746 for further details.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            phartman Peter Hartmann (closed Nokia identity) (Inactive)
            chiefaua Thomas Thrainer
            Votes:
            2 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes