HTTP internals: do not discard data if not receiving gzip end marker

some servers send gzip data without the gzip end markers. In that case,
we should deliver all content and tear down the gzip data structures.

Reviewed-by: Markus Goetz
Patch-by: Tor Arne Vestbø and Peter Hartmann
Task-number: QTBUG-16022